--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Roboto';
+}
+
 #countdown {
     width:500px;
     aspect-ratio: 16 / 9;
@@ -62,6 +66,13 @@
 
 #timeButton {
     width:80px;
+    background-color:rgb(36,39,41);
+    color:white;
+    transition-duration: 250ms;
+}
+
+#timeButton:hover {
+    background-color:rgb(105, 111, 117);
 }
 
 #footerCredit {
@@ -74,9 +85,14 @@
 body {
     margin:0;
     min-height:100vh;
-    background-color:rgb(147, 223, 147);
+    background-color:rgb(96, 178, 96);
 }
 
 a {
     color:inherit;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src:url(assets/Roboto-Regular.ttf)
 }
